# ardupilot

./: .gitignore  2025-08-17-this-session-is-being-continued-from-a-previous-co.txt  2025-08-18-brucemac-ardupilot-statustextmonitorpy.txt  AGENTS.md  AGENT_SERIAL_INSTRUCTIONS.md  CAN_BUS_OFF_DIAGNOSIS.md  CLAUDE.md  DNA_Encoding_Fix_Summary.md  DNA_Node_Decoder_Bug.md  DRONECAN_NODE1_BUG_REPORT.md  DroneCAN_FOTA_Implementation_Plan.md  ESP32_Alignment_Analysis.md  ESP32_Backtrace_Guide.md  ESP32_CAN_Phase1_Summary.md  ESP32_FOTA_Testing_Guide.md  ESP32_HAL_Code_Review_2025-08-25.md  ESP32_Issues_Resolution_Summary.md  ESP32_MAVLink_OTA_Implementation_Plan.md  ESP32_Stack_Protection.md  GCS_Changes_Analysis.md  GCS_Parameters_Analysis.md  MAVLink_Test_Analysis.md  Parameter_Encoding_Analysis.md  QGroundControl_20250808.params  REFACTOR_STATUS.md  SERIAL_COORDINATION.md  STATUSTEXT_Priority_Queue_TODO.md  agent_build_wrapper.sh  analyze_bad_data.py  analyze_can_id_issue  analyze_can_id_issue.c  analyze_corrupted_data.py  analyze_corruption_msgid.py  analyze_corruption_pattern.py  analyze_mavlink_corruption_patterns.py  analyze_msgid_corruption.py  analyze_new_corruption.py  analyze_null_pattern.py  analyze_raw_corruption.py  analyze_unknown_messages.py  (+64 more)
ArduPlane/: wscript
Rover/: Parameters.cpp  Parameters.h  Rover.cpp  Rover.h  system.cpp  wscript
docs/: PARAM_EXT_approach_comparison.md  PARAM_EXT_component_id_analysis.md  PARAM_EXT_design.md  PARAM_EXT_implementation_plan.md  (+3 more)
libraries/AP_HAL_ESP32/targets/esp32s3/esp-idf/ap_deps/: CMakeLists.txt  idf_component.yml
(+263 files in other folders)
